# studyLinux2022

./: README.md  bash_profile.bash  execute1  execute1.c  execute2  execute2.c  execute2_p  execute2_p.c  fork1  fork1.c  fork2  fork2.c  fork3  fork3.c  fork_wait  fork_wait.c  hello.c  myprog.c  system  system.c  waitpid  waitpid.c
Bash_file/: Calc.bash  Calc2.bash  builtin.bash  count1.bash  count2.bash  factorial_ver1.bash  factorial_ver2.bash  factorial_ver3.bash  hello.txt  invite.bash  lshead.bash  menu.bash  perm1.bash  perm2.bash  power.bash  reply.bash  reply_ver2.bash  rhead.bash  score1.bash  score2.bash  state.bash  wc1.bash  wc2.bash
cmake_pratice/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  main_for_a  main_for_src  reverse.c
cmake_pratice/lib_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt
library_test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  libtest  test.cpp  test_lib.h
library_test/lib_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  test_lib.cpp
